--- a/package.json
+++ b/package.json
@@ -7,12 +7,17 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@mdi/font": "5.9.55",
+    "@vue/composition-api": "^1.6.0",
     "core-js": "^3.8.3",
-    "vue": "^2.6.14"
+    "roboto-fontface": "*",
+    "vue": "^2.6.14",
+    "vuetify": "^2.6.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "vue-cli-plugin-vuetify": "~2.4.8",
     "vue-template-compiler": "^2.6.14"
   }
 }
